enforce-readonly-rootfs.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: enforce-readonly-rootfs
spec:
  validationFailureAction: audit
  rules:
    - name: readonly-rootfs
      match:
        resources:
          kinds:
            - Pod
          namespaces:
            - sonarqube 
      skipBackgroundRequests: true
      validate:
        message: "Containers must use a read-only root filesystem."
        pattern:
          spec:
            containers:
              - securityContext:
                  readOnlyRootFilesystem: true
